change endpoint to mobileBack

--- a/frontend/home/home.html
+++ b/frontend/home/home.html
@@ -1,12 +1,18 @@
 <div class="home">
   <div class="jumbotron centered">
-    <h1>Welcome to the ngEurope sample!</h1>
+    <h1>Welcome to the AngularJs Login sample!</h1>
     <h2 ng-show="jwt">Your JWT is:</h2>
+
+    <p ng-show="jwt"><a class="btn btn-default" role="button" ng-click="logout()">Log Out</a></p>
+    <p ng-hide="jwt"><a class="btn btn-default" role="button" ng-click="login()">Log In</a></p>
     <pre ng-show="jwt" class="jwt"><code>{{jwt}}</code></pre>
     <pre ng-show="jwt" class="jwt"><code>{{decodedJwt | json}}</code></pre>
+
     <p>Click any of the buttons to call an API and get a response</p>
     <p><a class="btn btn-primary btn-lg" role="button" ng-click="callAnonymousApi()">Call Anonymous API</a></p>
     <p><a class="btn btn-primary btn-lg" role="button" ng-click="callSecuredApi()">Call Secure API</a></p>
+
+
     <h2 ng-show="response">The response of calling the <span class="red">{{api}}</span> API is:</h2>
     <h3 ng-show="response">{{response}}</h3>
   </div>
