--- a/frontend/login/login.html
+++ b/frontend/login/login.html
@@ -2,8 +2,8 @@
   <h1>Login</h1>
   <form role="form">
   <div class="form-group">
-    <label for="username">Username</label>
-    <input type="text" class="form-control" ng-model="user.username" id="username" placeholder="Username">
+    <label for="mobile">Mobile</label>
+    <input type="text" class="form-control" ng-model="user.mobile" id="mobile" placeholder="Mobile">
   </div>
   <div class="form-group">
     <label for="password">Password</label>
